--- a/calc.html
+++ b/calc.html
@@ -1,5 +1,5 @@
 <html>
-<
+
 <script src="jquery.js"></script>
 
 <style>
@@ -14,6 +14,12 @@ height: 40px;
 text-align: right;
 }
 
+.This_tho{
+  font-size: 14px;
+  height: 40px;
+  width: 80px;
+  text-align: center;
+}
 </style>
 </head>
 
@@ -48,19 +54,29 @@ text-align: right;
   <td><button id="equalsButton">=</button></td>
   <td><button id="divideButton" class="operator">&#247;</button></td>
 </tr>
-
-
-
 </table>
+
+<hr>
 <br>
 <h1>3 Divisiblity Check</h1>
 <div>
   Input First Number :<input type="number" id="in1" name="in1"><br>
-  <button id="but" onclick="Click_me()">Click pls!</button>
+  <button class="This_tho" id="but" onclick="Click_me()">Click pls!</button>
   <br>
-  <span id="clk_out">Result</span>
+  Result: <span id="clk_out"></span>
 </div>
+<hr>
 
+
+<br>
+<div>
+  <h1>Even Odd Number Check</h1>
+    Input some Number: <input type="number" id="even_odd" name="even_odd">
+    <br>
+    <button class="This_tho" id="even_click" onclick="Even_Odd_Check()">Click me or die</button>
+    <br>
+    Result: <span id="even_out"></span>
+</div>
 <span id='output'><!-- Use this span for writing debug messages or anything else you think will help! --></span>
 
 <script src="calc.js"></script>
