--- a/calc.html
+++ b/calc.html
@@ -23,7 +23,7 @@ text-align: right;
 </style>
 </head>
 
-<body>
+<body style="background-color: lightblue;">
 <h1>CALCULATOR</h1>
 <table>
 <tr>
@@ -77,6 +77,26 @@ text-align: right;
     <br>
     Result: <span id="even_out"></span>
 </div>
+
+<br>
+<hr>
+<div>
+  <h1>Age checker</h1>
+  Input your age: <input type="number" id="age_display"><br>
+  <button class="This_tho" id="age_in" onclick="age_checker()">Check</button><br>
+  Result: <span id="final"></span>
+</div>
+<hr>
+
+<div>
+  <h1>Special Greetings</h1>
+  Enter Your Name: <input type="text" id="name_in"><br>
+  <button class="This_tho" id="name_dis" onclick="Greeting_alert()">Kill me</button><br>
+  Result: <span id="name_out"></span>
+</div>
+
+
+
 <span id='output'><!-- Use this span for writing debug messages or anything else you think will help! --></span>
 
 <script src="calc.js"></script>
