Added 2 more fucntions

--- a/calc.html
+++ b/calc.html
@@ -94,7 +94,21 @@ text-align: right;
   <button class="This_tho" id="name_dis" onclick="Greeting_alert()">Kill me</button><br>
   Result: <span id="name_out"></span>
 </div>
+<hr>
+<div>
+  <h1>Switch Case 3 divider</h1>
+  Input Any Number: <input type="number" id="switch_in"><br>
+  <button class="This_tho" id="switch_btn" onclick="switch_divide()">Kill La Kill</button><br>
+  Result: <span id="switch_out"></span>
+</div>
+<hr>
 
+<div>
+  <h1>Input Checker</h1>
+  Input something: <input type="text" id="in_text"><br>
+  <button class="This_tho" id="text_btn" onclick="input_checker()">Jaden</button><br>
+  Result: <span id="out_text"></span><br>
+</div>
 
 
 <span id='output'><!-- Use this span for writing debug messages or anything else you think will help! --></span>
