--- a/calc.html
+++ b/calc.html
@@ -1,6 +1,9 @@
 <html>
 
 <script src="jquery.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <style>
 button {
@@ -109,7 +112,17 @@ text-align: right;
   <button class="This_tho" id="text_btn" onclick="input_checker()">Jaden</button><br>
   Result: <span id="out_text"></span><br>
 </div>
+<hr>
 
+<div>
+  <h1>Calculator Shitty Version</h1>
+  <input type="number" id="in_1"><input type="number" id="in_2">
+  <br>
+  <br>
+  <button class="btn btn-default" id="plus" value="+">+</button>  <button class="btn btn-success" id="minus" value="-">-</button>  <button class="btn btn-success" id="multi" value="*">x</button>  <button class="btn btn-success" id="divide" value="/">/</button><br><br>
+  <button class="This_tho" id="btn_clk" onclick="new_calc()">Kill Me Thanks</button><br>
+  Result: <span id="cal_out"></span>
+</div>
 
 <span id='output'><!-- Use this span for writing debug messages or anything else you think will help! --></span>
 
