last function not working

--- a/calc.html
+++ b/calc.html
@@ -119,7 +119,7 @@ text-align: right;
   <input type="number" id="in_1"><input type="number" id="in_2">
   <br>
   <br>
-  <button class="btn btn-default" id="plus" value="+">+</button>  <button class="btn btn-success" id="minus" value="-">-</button>  <button class="btn btn-success" id="multi" value="*">x</button>  <button class="btn btn-success" id="divide" value="/">/</button><br><br>
+  <button class="but" value="+">+</button>  <button class="but" value="-">-</button>  <button class="but" value="*">x</button>  <button  class="but" value="/">/</button><br><br>
   <button class="This_tho" id="btn_clk" onclick="new_calc()">Kill Me Thanks</button><br>
   Result: <span id="cal_out"></span>
 </div>
