removed something hmmm

--- a/maps.html
+++ b/maps.html
@@ -29,7 +29,7 @@
         });
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1hSVVsEx6y90Gl1Adbopq9l-LGfqEXOY&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
     async defer></script>
   </body>
 </html>
