apny ghar ka rasta daal diya hai yahan

--- a/maps.html
+++ b/maps.html
@@ -24,12 +24,12 @@
       var map;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 8
+          center: {lat: 24.955061, lng: 67.063826},
+          zoom: 14
         });
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDoOhzr04W3b9vMTxjp2pcnTLmejx9pCpE&callback=initMap"
     async defer></script>
   </body>
 </html>
