--- a/maps.html
+++ b/maps.html
@@ -24,7 +24,7 @@
       var map;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: 24.955061, lng: 67.063826},
+          center: {lat: 24.9200187, lng: 67.13449539},
           zoom: 14
         });
       }
