shameer ki kitab ky chapter 3 ky programs.js

--- a/calc.html
+++ b/calc.html
@@ -25,8 +25,28 @@ text-align: right;
 }
 </style>
 </head>
-
 <body style="background-color: lightblue;">
+
+<h1>
+  This is new section here 
+</h1>
+<ul id="results"></ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<br><br><br><br>
 <h1>CALCULATOR</h1>
 <table>
 <tr>
