--- a/calc.html
+++ b/calc.html
@@ -146,8 +146,8 @@ text-align: right;
 
 <span id='output'><!-- Use this span for writing debug messages or anything else you think will help! --></span>
 
-<script src="calc.js"></script>
-
+<!--<script src="calc.js"></script>-->
+<script src="practice.js"></script>
 
 </body>
 
