--- a/if_i_am_practicing_then_I_should_make_a_new_file.html
+++ b/if_i_am_practicing_then_I_should_make_a_new_file.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <!-- saved from url=(0087)file:///home/kazzastic/Desktop/JS/if_i_am_practicing_then_I_should_make_a_new_file.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<html>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>Practice The JS basic bruhhhhh</title>
 </head>
 <body style="background-color: pink;">
@@ -12,18 +14,53 @@
 <button id="test">
 	Click Me!
 </button>
-<script>
-	function Button(){
-	this.clicked = false;
-	this.click = function(){
-		this.clicked = true;
-		assert(button.clicked, "The button was clicked");	
-	};
-}
-	var button = new Button();
-	var elem = document.getElementById("test");
-	elem.addEventListener("click", button.click);
-</script>
+<hr>
+<h2 style="text-align: center;">
+	Class Work
+</h2>
+<div>
+	<table border="3">
+		<tr>
+			<th>Hello</th>
+			<th>There!</th>
+		</tr>
+		<tr>
+			<td>row1, cell1</td>
+			<td>row1, cell2</td>
+			<td>row1, cell3</td>
+			<td>row1, cell3</td>
+			<td>row1, cell3</td>
+			<td>row1, cell3</td>
+			<td>row1, cell3</td>
+			<td>row1, cell3</td>
+		</tr>
+		<tr>
+			<td>row2, cell1</td>
+			<td>row2, cell2</td>
+			<td>row2, cell1</td>
+			<td>row2, cell1</td>
+			<td>row2, cell1</td>
+			<td>row2, cell1</td>
+			<td>row2, cell1</td>
+			<td>row2, cell1</td>
+		</tr>
+	</table>
+</div>
+<hr>
+<div id="container" style="width: 500;"></div>
+<div id="header" style="background-color: #FFA500;"></div>
+<div id="menu" style="background-color: #FFA500; height: 200px; width: 100px; float: left;">
+	<b>Menu</b><br>
+	HTML<br>
+	CSS<br>
+	JavaScript<br>
+</div>
+<div id="content" style="background-color: #EEEEEE; height: 200px; width: 400px; float: left;">
+	AYEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEe
+
+</div>
+<div id="footer" style="background-color: #FFA500;clear: both; text-align: center;"></div>
 <script src="practice.js"></script>
 
-</body></html>
+</body>
+</html>
