--- a/if_i_am_practicing_then_I_should_make_a_new_file.html
+++ b/if_i_am_practicing_then_I_should_make_a_new_file.html
@@ -57,9 +57,9 @@
 </div>
 <div id="content" style="background-color: #EEEEEE; height: 200px; width: 400px; float: left;">
 	AYEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEe
-
 </div>
 <div id="footer" style="background-color: #FFA500;clear: both; text-align: center;"></div>
+<div id="box1">First Box</div>
 <script src="practice.js"></script>
 
 </body>
