--- a/if_i_am_practicing_then_I_should_make_a_new_file.html
+++ b/if_i_am_practicing_then_I_should_make_a_new_file.html
@@ -2,6 +2,9 @@
 <!-- saved from url=(0087)file:///home/kazzastic/Desktop/JS/if_i_am_practicing_then_I_should_make_a_new_file.html -->
 <html>
 <head>
+<style>
+</style>	
+	<link rel="stylesheet" type="text/css" href="link.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 	<title>Practice The JS basic bruhhhhh</title>
 </head>
@@ -18,7 +21,10 @@
 <h2 style="text-align: center;">
 	Class Work
 </h2>
-<div>
+<h4 style="text-decoration: blink;">
+	Saad
+</h4>
+<div id="first_id">
 	<table border="3">
 		<tr>
 			<th>Hello</th>
@@ -60,7 +66,16 @@
 </div>
 <div id="footer" style="background-color: #FFA500;clear: both; text-align: center;"></div>
 <div id="box"1>First Box</div>
+<div class="first_class">
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	</p>
+</div>
 <script src="practice.js"></script>
-
 </body>
 </html>
