--- a/if_i_am_practicing_then_I_should_make_a_new_file.html
+++ b/if_i_am_practicing_then_I_should_make_a_new_file.html
@@ -5,13 +5,32 @@
 <style>
 </style>	
 	<link rel="stylesheet" type="text/css" href="link.css">
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+            
 	<title>Practice The JS basic bruhhhhh</title>
 </head>
 <body style="background-color: pink;">
 <h1>
 	Heck yes We doing this Shiz!
 </h1>
+
+<div class="card-panel teal lighten-2">This is a card panel with a teal lighten-2 class</div> 
+<a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
+  <div class="fixed-action-btn">
+    <a class="btn-floating btn-large red">
+      <i class="large material-icons">mode_edit</i>
+    </a>
+    <ul>
+      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+      <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+    </ul>
+  </div
 <p>loren ipsum matherboardsssssssssssssssssss</p>
 <ul id="results"><li class="pass">Function call on Window</li><li class="pass">Another function call on the window</li><li class="fail">Working with 1st ninja</li><li class="fail">first ninja is skulking</li><li class="fail">second ninja is skulking</li><li class="fail">The emperor is merely a puppet</li><li class="fail">The puppet does not know how to rule</li></ul>
 <button id="test">
@@ -21,9 +40,6 @@
 <h2 style="text-align: center;">
 	Class Work
 </h2>
-<h4 style="text-decoration: blink;">
-	Saad
-</h4>
 <div id="first_id">
 	<table border="3">
 		<tr>
