--- a/material_design.html
+++ b/material_design.html
@@ -1,9 +1,37 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Material Design</title>
-</head>
-<body>
+  <!DOCTYPE html>
+  <html>
+    <head>
+    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <!--Import Google Icon Font-->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="materialize.css"  media="screen,projection"/>
 
-</body>
-</html>
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    </head>
+
+    <body>
+      <!--Import jQuery before materialize.js-->
+
+  <div class="fixed-action-btn">
+    <a class="btn-floating btn-large red">
+      <i class="large material-icons">mode_edit</i>
+    </a>
+    <ul>
+      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+      <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+    </ul>
+  </div>
+  <script>
+  	  $('.fixed-action-btn').openFAB();
+	  $('.fixed-action-btn').closeFAB();
+	  $('.fixed-action-btn.toolbar').openToolbar();
+	  $('.fixed-action-btn.toolbar').closeToolbar();
+  </script>      
+      <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+      <script type="text/javascript" src="materialize.js"></script>
+    </body>
+  </html>
