--- a/material_design.html
+++ b/material_design.html
@@ -1,19 +1,22 @@
-  <!DOCTYPE html>
-  <html>
-    <head>
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+
+    </style>
       <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
       <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
-    <body class="#f50057 pink accent-3">
+    <body class="#e0f2f1 teal lighten-5">
 
-      <div class="fixed-action-btn">
-      <a class="btn-floating btn-large red">
+    <div class="fixed-action-btn">
+      <a class="btn-floating btn-large blue darken-1">
       <i class="large material-icons">mode_edit</i>
       </a>
       <ul>
@@ -23,12 +26,57 @@
         <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
       </ul>
     </div>
-    <!--script>
-      $('.fixed-action-btn').openFAB();
-      $('.fixed-action-btn').closeFAB();
-      $('.fixed-action-btn.toolbar').openToolbar();
-      $('.fixed-action-btn.toolbar').closeToolbar();
-    </script-->
+
+<!--Side Nav Bar -->
+  <nav>
+    <div class="nav-wrapper blue">
+      <a href="#" class="brand-logo center">BabuSoft</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+      </ul>
+      <div class="row">
+        <ul id="slide-out" class="side-nav">
+
+          <li><div class="user-view">
+              <div class="background">
+                <img src="babulogo.jpg" width="300 px" height="200 px">
+              </div>
+                <a href="#!user"><img class="circle" src="saadbhai.jpeg"></a>
+                <a href="#!name"><span class="white-text name">Saad Bhai</span></a>
+                <a href="#!email"><span class="white-text email">saadBhai@hawtmail.com</span></a>
+              </div></li>
+          <li><a class="waves-effect" href="#!"><i class="material-icons">code</i>Home</a></li>
+          <li><a class="waves-effect" href="#!"><i class="material-icons">flare</i>Services</a></li>
+          <li><a class="waves-effect" href="#!"><i class="material-icons">desktop_mac</i>Team</a></li>
+          <li><a class="waves-effect" href="#!"><i class="material-icons">laptop_mac</i>Contact-Us</a></li>
+          <li><a class="waves-effect" href="#!"><i class="material-icons">dvr</i>Fuck Off Now</a></li>
+       </ul>
+       <a href="#" data-activates="slide-out" class="button-collapse show-on-medium-and-up"><i class="material-icons">menu</i></a>
+      </div>
+    </div>
+  </nav>
+<!--Card-->
+     <div class="row">
+          <div class="card">
+            <div class="card-image">
+              <img src="babulogo.jpg" width="70 px" height="300 px">
+              <span class="card-title">Card Title</span>
+            </div>
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+      </div>
+
+
+
+
+
+
+
 
 
 
@@ -51,5 +99,8 @@
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+      <script>
+        $('.button-collapse').sideNav();
+      </script>
     </body>
   </html>
