--- a/material_design.html
+++ b/material_design.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <style>
-
+      #babu_font{
+        font-family: Times New Roman;
+        text-align: center;
+      }
     </style>
       <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -13,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
-    <body class="#e0f2f1 teal lighten-5">
+    <body>
 
     <div class="fixed-action-btn">
       <a class="btn-floating btn-large blue darken-1">
@@ -29,8 +32,8 @@
 
 <!--Side Nav Bar -->
   <nav>
-    <div class="nav-wrapper blue">
-      <a href="#" class="brand-logo center">BabuSoft</a>
+    <div class="nav-wrapper blue lighten-4">
+      <a href="#" class="brand-logo center" id="babu_font"><b>BabuSoft</b></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
       </ul>
       <div class="row">
@@ -58,14 +61,34 @@
  <div class="parallax-container">
     <div class="parallax"><img src="card.jpg"></div>
   </div>
-  <div class="section white">
+  <div class="section #bbdefb blue lighten-4">
     <div class="row container">
-      <h2 class="header">Parallax</h2>
-      <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
-    </div>
-  </div>
+      <h2 class="header" id="babu_font">Who are we?</h2>
+      <p class="grey-text text-darken-3 lighten-3" id="babu_font">An NED-UET, Safora Valley based startup, which has partnered with countless<br>MNC like Google, Facebook and NASA.</p>
+      <h2 class="grey-text text-darken-3 lighten-3" id="babu_font">Our Team</h2>
+      <!--Card 1-->
+      <div class="col s1 m10">
+          <div class="row">
+            <div class="col s12 m4">
+              <div class="card medium">
+                <div class="card-image">
+                  <img src="saadbhai.jpeg">
+                </div>
+                <div class="card-content">
+                  <p>Hello guys, I'm the everything of this company, my name is bhai, Saad bhai.</p>
+                </div>
+                <div class="card-action">
+                  <a href="https://github.com/kazzastic"><span class="blue-text">My Github Bitches</span></a>
+                </div>
+              </div>
+            </div>
+          </div>
+            </div>
+          </div> 
+        </div>
+        
   <div class="parallax-container">
-    <div class="parallax"><img src="card.jpg"></div>
+    <div class="parallax"><img src="parallax.jpg"></div>
   </div>
 
 
