--- a/material_design.html
+++ b/material_design.html
@@ -67,10 +67,9 @@
       <p class="grey-text text-darken-3 lighten-3" id="babu_font">An NED-UET, Safora Valley based startup, which has partnered with countless<br>MNC like Google, Facebook and NASA.</p>
       <h2 class="grey-text text-darken-3 lighten-3" id="babu_font">Our Team</h2>
       <!--Card 1-->
-      <div class="col s1 m10">
-          <div class="row">
-            <div class="col s12 m4">
-              <div class="card medium">
+      <div class="row">
+        <div class="col s12 m4 l2">
+          <div class="card medium">
                 <div class="card-image">
                   <img src="saadbhai.jpeg">
                 </div>
@@ -83,10 +82,40 @@
               </div>
             </div>
           </div>
-            </div>
-          </div> 
+          </div>
         </div>
-        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <div class="col s12 m4 l8"><p>s12 m4</p></div>
+        <div class="col s12 m4 l2"><p>s12 m4</p></div>
+      </div>
   <div class="parallax-container">
     <div class="parallax"><img src="parallax.jpg"></div>
   </div>
