--- a/material_design.html
+++ b/material_design.html
@@ -57,7 +57,7 @@
       </div>
     </div>
   </nav>
-<!--Parallax-->
+<!--Parallax 1-->
  <div class="parallax-container">
     <div class="parallax"><img src="card.jpg"></div>
   </div>
@@ -66,63 +66,89 @@
       <h2 class="header" id="babu_font">Who are we?</h2>
       <p class="grey-text text-darken-3 lighten-3" id="babu_font">An NED-UET, Safora Valley based startup, which has partnered with countless<br>MNC like Google, Facebook and NASA.</p>
       <h2 class="grey-text text-darken-3 lighten-3" id="babu_font">Our Team</h2>
-      <!--Card 1-->
-      <div class="row">
-        <div class="col s12 m4 l2">
-          <div class="card medium">
-                <div class="card-image">
-                  <img src="saadbhai.jpeg">
-                </div>
-                <div class="card-content">
-                  <p>Hello guys, I'm the everything of this company, my name is bhai, Saad bhai.</p>
-                </div>
-                <div class="card-action">
-                  <a href="https://github.com/kazzastic"><span class="blue-text">My Github Bitches</span></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          </div>
-        </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <div class="col s12 m4 l8"><p>s12 m4</p></div>
-        <div class="col s12 m4 l2"><p>s12 m4</p></div>
       </div>
+    </div>
+
+      <!--Card 1-->
+<div class="row blue lighten-4">
+  <div class="col m2 l3">
+    <div class="card small">
+      <div class="card-image">
+        <img src="saadbhai.jpeg">
+        <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Saad Bhai</span>
+      </div>
+      <div class="card-content">
+        <p>I am a <b>EVERYTHING</b> of this company.</p>
+      </div>
+      <div class="card-action">
+        <a href="https://github.com/BabuuSoft"><span class="blue-text">Check My Github</span></a>
+      </div>
+    </div>
+  </div>
+  <!--Card 2-->
+  <div class="col m2 l3">
+    <div class="card small">
+      <div class="card-image">
+        <img src="coder.jpeg">
+        <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Shia1234</span>
+      </div>
+      <div class="card-content">
+        <p>I am Shia :(</p>
+      </div>
+      <div class="card-action">
+        <a href="https://github.com/kazzastic"><span class="blue-text">Check My Github :')</span></a>
+      </div>
+    </div>
+  </div> 
+  <!--Card 3-->   
+    <div class="col m2 l3">
+    <div class="card small">
+      <div class="card-image">
+        <img src="babu.jpeg">
+        <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">BabuHek</span>
+      </div>
+      <div class="card-content">
+        <p>Chal na Chal kuttay</p>
+      </div>
+      <div class="card-action">
+        <a href="https://github.com/Shaheer-Imam" class="blue-text">Maira Github Daikh na</a>
+      </div>
+    </div>
+  </div>
+  <!--Card 4--> 
+    <div class="col m2 l3">
+    <div class="card small">
+      <div class="card-image">
+        <img src="shameer.jpeg">
+        <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Shameer Server</span>
+      </div>
+      <div class="card-content">
+        <p>Shake?</p>
+      </div>
+      <div class="card-action">
+        <a href="https://github.com/syedshameersarwar" class="blue-text">Please with due respect check my github</a>
+      </div>
+    </div>
+  </div> 
+</div>
+
+
+<!--Parallax 2-->
   <div class="parallax-container">
     <div class="parallax"><img src="parallax.jpg"></div>
   </div>
 
-
-
-
+<!--Parallax 3-->
+  <div class="section #bbdefb blue lighten-4">
+    <div class="row container">
+      <h2 class="header" id="babu_font">Our Services</h2>
+      <p class="grey-text text-darken-3 lighten-3" id="babu_font">We offer everything, from making a website to cleaing your home, to make AI machine learing models to "faroot le kr aon apky liye", when I say everything I mean IT.</p>
+      <h2 class="grey-text text-darken-3 lighten-3" id="babu_font">Our Team</h2>
+      </div>
+    </div>
+  <div class="parallax-container">
+    <div class="parallax"><img src="card.jpg"></div>
+  </div>
 
 
 
