color scheme set which is black and light-blue darken-4

--- a/material_design.html
+++ b/material_design.html
@@ -19,7 +19,7 @@
     <body>
 
     <div class="fixed-action-btn">
-      <a class="btn-floating btn-large blue darken-1">
+      <a class="btn-floating btn-large black">
       <i class="large material-icons">mode_edit</i>
       </a>
       <ul>
@@ -32,8 +32,8 @@
 
 <!--Side Nav Bar -->
   <nav>
-    <div class="nav-wrapper blue lighten-4">
-      <a href="#" class="brand-logo center" id="babu_font"><b><span class="black-text">BabuSoft</span></b></a>
+    <div class="nav-wrapper black">
+      <a href="#" class="brand-logo center" id="babu_font"><b><span class="white-text">BabuSoft</span></b></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
       </ul>
       <div class="row">
@@ -59,74 +59,74 @@
   </nav>
 <!--Parallax 1-->
  <div class="parallax-container">
-    <div class="parallax"><img src="card.jpg"></div>
+    <div class="parallax"><img src="soft.jpeg"></div>
   </div>
-  <div class="section #bbdefb blue lighten-4">
+  <div class="section light-blue darken-4">
     <div class="row container">
-      <h2 class="header" id="babu_font">Who are we?</h2>
-      <p class="grey-text text-darken-3 lighten-3" id="babu_font">An NED-UET, Safora Valley based startup, which has partnered with countless<br>MNC like Google, Facebook and NASA.</p>
-      <h2 class="grey-text text-darken-3 lighten-3" id="babu_font">Our Team</h2>
+      <h2 class="header" id="babu_font"><span class="white-text">Who are we?</span></h2>
+      <p class="white-text text-darken-3 lighten-3" id="babu_font">An NED-UET, Safora Valley based startup, which has partnered with countless<br>MNC like Google, Facebook and NASA.</p>
+      <h2 class="white-text text-darken-3 lighten-3" id="babu_font">Our Team</h2>
       </div>
     </div>
 
       <!--Card 1-->
-<div class="row blue lighten-4">
+<div class="row light-blue darken-4">
   <div class="col m2 l3">
-    <div class="card small">
+    <div class="card small grey darken-4">
       <div class="card-image">
         <img src="saadbhai.jpeg">
         <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Saad Bhai</span>
       </div>
-      <div class="card-content">
+      <div class="card-content white-text">
         <p>I am a <b>EVERYTHING</b> of this company.</p>
       </div>
       <div class="card-action">
-        <a href="https://github.com/BabuuSoft"><span class="blue-text">Check My Github</span></a>
+        <a href="https://github.com/BabuuSoft"><span class="white-text">Check My Github</span></a>
       </div>
     </div>
   </div>
   <!--Card 2-->
   <div class="col m2 l3">
-    <div class="card small">
+    <div class="card small grey darken-4">
       <div class="card-image">
         <img src="coder.jpeg">
         <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Shia1234</span>
       </div>
       <div class="card-content">
-        <p>I am Shia :(</p>
+        <p class="white-text">I am Shia :(</p>
       </div>
       <div class="card-action">
-        <a href="https://github.com/kazzastic"><span class="blue-text">Check My Github :')</span></a>
+        <a href="https://github.com/kazzastic"><span class="white-text">Check My Github :')</span></a>
       </div>
     </div>
   </div> 
   <!--Card 3-->   
     <div class="col m2 l3">
-    <div class="card small">
+    <div class="card small grey darken-4">
       <div class="card-image">
         <img src="babu.jpeg">
         <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">BabuHek</span>
       </div>
       <div class="card-content">
-        <p>Chal na Chal kuttay</p>
+        <p class="white-text">Chal na Chal kuttay</p>
       </div>
       <div class="card-action">
-        <a href="https://github.com/Shaheer-Imam" class="blue-text">Maira Github Daikh na</a>
+        <a href="https://github.com/Shaheer-Imam" class="white-text">Maira Github Daikh na</a>
       </div>
     </div>
   </div>
   <!--Card 4--> 
     <div class="col m2 l3">
-    <div class="card small">
+    <div class="card small grey darken-4">
       <div class="card-image">
         <img src="shameer.jpeg">
         <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Shameer Server</span>
       </div>
       <div class="card-content">
-        <p>Shake?</p>
+        <p class="white-text">Shake?</p>
       </div>
       <div class="card-action">
-        <a href="https://github.com/syedshameersarwar" class="blue-text">Please with due respect check my github</a>
+        <a href="https://github.com/syedshameersarwar" class="white-text">Please with due respect check my github</a>
       </div>
     </div>
   </div> 
@@ -139,11 +139,11 @@
   </div>
 
 <!--Parallax 3-->
-  <div class="section #bbdefb blue lighten-4">
+  <div class="section light-blue darken-4">
     <div class="row container">
-      <h2 class="header" id="babu_font">Our Services</h2>
-      <p class="grey-text text-darken-3 lighten-3" id="babu_font">We offer everything, from making a website to cleaing your home, to make AI machine learing models to "faroot le kr aon apky liye", when I say everything I mean IT.</p>
-      <h2 class="grey-text text-darken-3 lighten-3" id="babu_font">Our Team</h2>
+      <h2 class="header" id="babu_font"><span class="white-text">Our Services</span></h2>
+      <p class="white-text text-darken-3 lighten-3" id="babu_font">We offer everything, from making a website to cleaing your home, to make AI machine learing models to "faroot le kr aon apky liye", when I say everything I mean IT.</p>
+      <h2 class="white-text text-darken-3 lighten-3" id="babu_font">Our Team</h2>
       </div>
     </div>
   <div class="parallax-container">
@@ -153,52 +153,32 @@
 
 
   <!--Footer-->
-       <footer class="page-footer blue lighten-4">
+       <footer class="page-footer light-blue darken-4">
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
-                <h5 class="black-text">BabuSoft</h5>
-                <p class="black-text text-lighten-4">Away beyond the right doings and wrong doings there is a world, I'll meet you there
+                <h5 class="white-text">BabuSoft</h5>
+                <p class="white-text text-lighten-4">Away beyond the right doings and wrong doings there is a world, I'll meet you there
                     <br>~Rumi</p>
               </div>
               <div class="col l4 offset-l2 s12">
-                <h5 class="black-text">Contact Us</h5>
+                <h5 class="white-text">Contact Us</h5>
                 <ul>
-                  <li><a class="black-text text-lighten-3" href="#!">Github</a></li>
-                  <li><a class="black-text text-lighten-3" href="#!">Facebook</a></li>
-                  <li><a class="black-text text-lighten-3" href="#!">Twitter</a></li>
-                  <li><a class="black-text text-lighten-3" href="#!">LinkedIn</a></li>
+                  <li><a class="white-text text-lighten-3" href="#!">Github</a></li>
+                  <li><a class="white-text text-lighten-3" href="#!">Facebook</a></li>
+                  <li><a class="white-text text-lighten-3" href="#!">Twitter</a></li>
+                  <li><a class="white-text text-lighten-3" href="#!">LinkedIn</a></li>
                 </ul>
               </div>
             </div>
           </div>
           <div class="footer-copyright">
-            <div class="container"><span class="black-text">
+            <div class="container"><span class="white-text">
             © 2019 Copyright Text</span>
-            <a class="black-text text-lighten-4 right" href="#!">Chal na ab</a>
+            <a class="white-text text-lighten-4 right" href="#!">Chal na ab</a>
             </div>
           </div>
         </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
