--- a/deleting.html
+++ b/deleting.html
@@ -38,6 +38,13 @@
       </ul>
     </div>
   </nav>
+  <div class="carousel carousel-slider">
+    <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/800/400/food/1"></a>
+    <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/800/400/food/2"></a>
+    <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/800/400/food/3"></a>
+    <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/800/400/food/4"></a>
+  </div>
+
 
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -49,6 +56,9 @@
         $(document).ready(function(){
         $('.parallax').parallax();
       });
+  $('.carousel.carousel-slider').carousel({
+    fullWidth: false
+  });  
       </script>
     </body>
   </html>
