--- a/material_design.html
+++ b/material_design.html
@@ -57,9 +57,19 @@
       </div>
     </div>
   </nav>
+
+  <!--Slider full screen-->
+  <div class="carousel carousel-slider">
+    <a class="carousel-item" href="#one!"><img src="team.jpg"></a>
+    <a class="carousel-item" href="#two!"><img src="team2.jpg"></a>
+    <a class="carousel-item" href="#three!"><img src="soft.jpg"></a>
+    <a class="carousel-item" href="#four!"><img src="card.jpg"></a>
+  </div>
+        
+
 <!--Parallax 1-->
  <div class="parallax-container">
-    <div class="parallax"><img src="soft.jpeg"></div>
+    <div class="parallax"><img src="soft.jpg"></div>
   </div>
   <div class="section light-blue darken-4">
     <div class="row container">
@@ -104,7 +114,7 @@
     <div class="col m2 l3">
     <div class="card small grey darken-4">
       <div class="card-image">
-        <img src="babu.jpeg">
+        <img src="ceo.jpeg" width="20px" height="330px">
         <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">BabuHek</span>
       </div>
       <div class="card-content">
@@ -189,6 +199,9 @@
       <script>
         $(document).ready(function(){
         $('.parallax').parallax();
+      });
+        $('.carousel.carousel-slider').carousel({
+          fullWidth: true
       });
       </script>
     </body>
