--- a/material_design.html
+++ b/material_design.html
@@ -66,11 +66,10 @@
     <a class="carousel-item" href="#four!"><img src="card.jpg"></a>
   </div>
         
-
-<!--Parallax 1-->
+<!--Parallax 1>
  <div class="parallax-container">
-    <div class="parallax"><img src="soft.jpg"></div>
-  </div>
+    <div class="parallax"><img src="card.jpg"></div>
+  </div-->
   <div class="section light-blue darken-4">
     <div class="row container">
       <h2 class="header" id="babu_font"><span class="white-text">Who are we?</span></h2>
@@ -100,7 +99,7 @@
     <div class="card small grey darken-4">
       <div class="card-image">
         <img src="coder.jpeg">
-        <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Shia1234</span>
+        <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Kazim</span>
       </div>
       <div class="card-content">
         <p class="white-text">I am Shia :(</p>
@@ -145,7 +144,7 @@
 
 <!--Parallax 2-->
   <div class="parallax-container">
-    <div class="parallax"><img src="parallax.jpg"></div>
+    <div class="parallax"><img src="saad_me_a.jpg"></div>
   </div>
 
 <!--Parallax 3-->
@@ -153,9 +152,69 @@
     <div class="row container">
       <h2 class="header" id="babu_font"><span class="white-text">Our Services</span></h2>
       <p class="white-text text-darken-3 lighten-3" id="babu_font">We offer everything, from making a website to cleaing your home, to make AI machine learing models to "faroot le kr aon apky liye", when I say everything I mean IT.</p>
-      <h2 class="white-text text-darken-3 lighten-3" id="babu_font">Our Team</h2>
+      <h2 class="white-text text-darken-3 lighten-3" id="babu_font">Our Services Include</h2>
+      <!--Card 1-->
+      <div class="col m2 l6">
+        <div class="card small grey darken-4">
+          <div class="card-image">
+            <img src="saadbhai.jpeg">
+              <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Saad Bhai</span>
+          </div>
+          <div class="card-content white-text">
+          <p>I am a <b>EVERYTHING</b> of this company.</p>
+          </div>
+          <div class="card-action">
+            <a href="https://github.com/BabuuSoft"><span class="white-text">Check My Github</span></a>
+          </div>
+        </div>
+  </div>
+  <!--Card 2-->
+    <div class="col m2 l6">
+    <div class="card small grey darken-4">
+      <div class="card-image">
+        <img src="coder.jpeg">
+        <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Kazim</span>
+      </div>
+      <div class="card-content">
+        <p class="white-text">I am Shia :(</p>
+      </div>
+      <div class="card-action">
+        <a href="https://github.com/kazzastic"><span class="white-text">Check My Github :')</span></a>
       </div>
     </div>
+  </div>
+  <!--Card 3-->
+    <div class="col m2 l6">
+    <div class="card small grey darken-4">
+      <div class="card-image">
+        <img src="coder.jpeg">
+        <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Kazim</span>
+      </div>
+      <div class="card-content">
+        <p class="white-text">I am Shia :(</p>
+      </div>
+      <div class="card-action">
+        <a href="https://github.com/kazzastic"><span class="white-text">Check My Github :')</span></a>
+      </div>
+    </div>
+  </div> 
+  <!--Card 4-->
+  <div class="col m2 l6">
+    <div class="card small grey darken-4">
+      <div class="card-image">
+        <img src="coder.jpeg">
+          <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Kazim</span>
+        </div>
+      <div class="card-content">
+        <p class="white-text">I am Shia :(</p>
+      </div>
+      <div class="card-action">
+        <a href="https://github.com/kazzastic"><span class="white-text">Check My Github :')</span></a>
+      </div>
+    </div>
+  </div>  
+</div>
+</div>
   <div class="parallax-container">
     <div class="parallax"><img src="card.jpg"></div>
   </div>
@@ -201,7 +260,9 @@
         $('.parallax').parallax();
       });
         $('.carousel.carousel-slider').carousel({
-          fullWidth: true
+          fullWidth: false,
+          indicators : true,
+          duration : 10
       });
       </script>
     </body>
