--- a/material_design.html
+++ b/material_design.html
@@ -260,7 +260,7 @@
         $('.parallax').parallax();
       });
         $('.carousel.carousel-slider').carousel({
-          fullWidth: false,
+          fullWidth: true,
           indicators : true,
           duration : 10
       });
