Front Page ready

--- a/material_design.html
+++ b/material_design.html
@@ -31,6 +31,7 @@
     </div>
 
 <!--Side Nav Bar -->
+<div class="navbar-fixed">
   <nav>
     <div class="nav-wrapper black">
       <a href="#" class="brand-logo center" id="babu_font"><b><span class="white-text">BabuSoft</span></b></a>
@@ -57,6 +58,7 @@
       </div>
     </div>
   </nav>
+</div>
 
   <!--Slider full screen-->
   <div class="carousel carousel-slider">
@@ -102,7 +104,7 @@
         <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Kazim</span>
       </div>
       <div class="card-content">
-        <p class="white-text">I am Shia :(</p>
+        <p class="white-text">Image Processing rotation invariant convolution network</p>
       </div>
       <div class="card-action">
         <a href="https://github.com/kazzastic"><span class="white-text">Check My Github :')</span></a>
@@ -114,7 +116,7 @@
     <div class="card small grey darken-4">
       <div class="card-image">
         <img src="ceo.jpeg" width="20px" height="330px">
-        <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">BabuHek</span>
+        <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Babu</span>
       </div>
       <div class="card-content">
         <p class="white-text">Chal na Chal kuttay</p>
@@ -155,64 +157,68 @@
       <h2 class="white-text text-darken-3 lighten-3" id="babu_font">Our Services Include</h2>
       <!--Card 1-->
       <div class="col m2 l6">
-        <div class="card small grey darken-4">
-          <div class="card-image">
-            <img src="saadbhai.jpeg">
-              <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Saad Bhai</span>
-          </div>
-          <div class="card-content white-text">
-          <p>I am a <b>EVERYTHING</b> of this company.</p>
-          </div>
-          <div class="card-action">
-            <a href="https://github.com/BabuuSoft"><span class="white-text">Check My Github</span></a>
-          </div>
+           <div class="card small grey darken-4">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="site.jpg">
+            </div>
+            <div class="card-content">
+              <span class="card-title activator white-text text-darken-4">Website<i class="material-icons right">more_vert</i></span>
+              <p><a href="http://github.com/BabuuSoft" class="white-text">Github</a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i>Websites</span>
+              <p>Our team of experts make the best full stack websites with affordable prices and gorgeous aesthetics.</p>
+            </div>
         </div>
   </div>
   <!--Card 2-->
-    <div class="col m2 l6">
-    <div class="card small grey darken-4">
-      <div class="card-image">
-        <img src="coder.jpeg">
-        <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Kazim</span>
-      </div>
-      <div class="card-content">
-        <p class="white-text">I am Shia :(</p>
-      </div>
-      <div class="card-action">
-        <a href="https://github.com/kazzastic"><span class="white-text">Check My Github :')</span></a>
-      </div>
-    </div>
+      <div class="col m2 l6">
+           <div class="card small grey darken-4">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="app.jpg">
+            </div>
+            <div class="card-content">
+              <span class="card-title activator white-text text-darken-4">Mobile Application<i class="material-icons right">more_vert</i></span>
+              <p><a href="http://github.com/BabuuSoft" class="white-text">Github</a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i>Mobile Application</span>
+              <p>Our team of experts can make cross platform mobile applications that are easy to use with a UI that is just too good yr, plus we do it all in like 10 rupees, so like come to papa!</p>
+            </div>
+        </div>
   </div>
   <!--Card 3-->
-    <div class="col m2 l6">
-    <div class="card small grey darken-4">
-      <div class="card-image">
-        <img src="coder.jpeg">
-        <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Kazim</span>
-      </div>
-      <div class="card-content">
-        <p class="white-text">I am Shia :(</p>
-      </div>
-      <div class="card-action">
-        <a href="https://github.com/kazzastic"><span class="white-text">Check My Github :')</span></a>
-      </div>
-    </div>
+      <div class="col m2 l6">
+           <div class="card small grey darken-4">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="saadat.jpg">
+            </div>
+            <div class="card-content">
+              <span class="card-title activator white-text text-darken-4">Cyber Security<i class="material-icons right">more_vert</i></span>
+              <p><a href="http://github.com/BabuuSoft" class="white-text">Github</a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i>Cyber Security</span>
+              <p>Our team of experts can provide seurity to your websites, SQL injections beware saadat is here to put an end to all those things. Plus if you have pictures of Faroot in your phone then we can handle it okay? just chillax</p>
+            </div>
+        </div>
   </div> 
   <!--Card 4-->
-  <div class="col m2 l6">
-    <div class="card small grey darken-4">
-      <div class="card-image">
-        <img src="coder.jpeg">
-          <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Kazim</span>
+      <div class="col m2 l6">
+           <div class="card small grey darken-4">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="end.jpg">
+            </div>
+            <div class="card-content">
+              <span class="card-title activator white-text text-darken-4">Movies<i class="material-icons right">more_vert</i></span>
+              <p><a href="http://github.com/BabuuSoft" class="white-text">Github</a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i>Movies</span>
+              <p>Our team is going to go and watch avengers endgame together, maybe join us, we arent just some bitches who like to work all the time we're also human beings and like to straighten our backs every once in a while, I mean come on ffs.</p>
+            </div>
         </div>
-      <div class="card-content">
-        <p class="white-text">I am Shia :(</p>
-      </div>
-      <div class="card-action">
-        <a href="https://github.com/kazzastic"><span class="white-text">Check My Github :')</span></a>
-      </div>
-    </div>
-  </div>  
+  </div>
 </div>
 </div>
   <div class="parallax-container">
@@ -262,7 +268,7 @@
         $('.carousel.carousel-slider').carousel({
           fullWidth: true,
           indicators : true,
-          duration : 10
+          duration : 100
       });
       </script>
     </body>
