error in the side bar

--- a/material_design.html
+++ b/material_design.html
@@ -48,7 +48,7 @@
                 <a href="#!name"><span class="white-text name">Saad Bhai</span></a>
                 <a href="#!email"><span class="white-text email">saadBhai@hawtmail.com</span></a>
               </div></li>
-          <li><a class="waves-effect" href="#!"><i class="material-icons">code</i>Home</a></li>
+          <li><a class="waves-effect" href="https://github.com"><i class="material-icons">code</i>Home</a></li>
           <li><a class="waves-effect" href="#!"><i class="material-icons">flare</i>Services</a></li>
           <li><a class="waves-effect" href="#!"><i class="material-icons">desktop_mac</i>Team</a></li>
           <li><a class="waves-effect" href="#!"><i class="material-icons">laptop_mac</i>Contact-Us</a></li>
