navbar not fixedbut works

--- a/material_design.html
+++ b/material_design.html
@@ -31,7 +31,7 @@
     </div>
 
 <!--Side Nav Bar -->
-<div class="navbar-fixed">
+<!--div class="navbar-fixed"-->
   <nav>
     <div class="nav-wrapper black">
       <a href="#" class="brand-logo center" id="babu_font"><b><span class="white-text">BabuSoft</span></b></a>
@@ -52,13 +52,13 @@
           <li><a class="waves-effect" href="#!"><i class="material-icons">flare</i>Services</a></li>
           <li><a class="waves-effect" href="#!"><i class="material-icons">desktop_mac</i>Team</a></li>
           <li><a class="waves-effect" href="#!"><i class="material-icons">laptop_mac</i>Contact-Us</a></li>
-          <li><a class="waves-effect" href="#!"><i class="material-icons">dvr</i>Fuck Off Now</a></li>
+          <li><a class="waves-effect" href="#!"><i class="material-icons">dvr</i>More</a></li>
        </ul>
        <a href="#" data-activates="slide-out" class="button-collapse show-on-medium-and-up"><i class="material-icons">menu</i></a>
       </div>
     </div>
   </nav>
-</div>
+<!--/div-->
 
   <!--Slider full screen-->
   <div class="carousel carousel-slider">
@@ -119,7 +119,7 @@
         <span class="card-title" style="width:100%; background: rgba(0, 0, 0, 0.5);">Babu</span>
       </div>
       <div class="card-content">
-        <p class="white-text">Chal na Chal kuttay</p>
+        <p class="white-text">I am CEO</p>
       </div>
       <div class="card-action">
         <a href="https://github.com/Shaheer-Imam" class="white-text">Maira Github Daikh na</a>
