cleaning the branch

--- a/material_design.html
+++ b/material_design.html
@@ -48,11 +48,11 @@
                 <a href="#!name"><span class="white-text name">Saad Bhai</span></a>
                 <a href="#!email"><span class="white-text email">saadBhai@hawtmail.com</span></a>
               </div></li>
-          <li><a class="waves-effect" href="https://github.com"><i class="material-icons">code</i>Home</a></li>
-          <li><a class="waves-effect" href="#!"><i class="material-icons">flare</i>Services</a></li>
-          <li><a class="waves-effect" href="#!"><i class="material-icons">desktop_mac</i>Team</a></li>
-          <li><a class="waves-effect" href="#!"><i class="material-icons">laptop_mac</i>Contact-Us</a></li>
-          <li><a class="waves-effect" href="#!"><i class="material-icons">dvr</i>More</a></li>
+          <li><a class="waves-effect" href="https://github.com"><i class="material-icons">home</i>Home</a></li>
+          <li><a class="waves-effect" href="#!"><i class="material-icons">info</i>Services</a></li>
+          <li><a class="waves-effect" href="#!"><i class="material-icons">people</i>Team</a></li>
+          <li><a class="waves-effect" href="#!"><i class="material-icons">phone</i>Contact-Us</a></li>
+          <li><a class="waves-effect" href="#!"><i class="material-icons">more</i>More</a></li>
        </ul>
        <a href="#" data-activates="slide-out" class="button-collapse show-on-medium-and-up"><i class="material-icons">menu</i></a>
       </div>
