--- a/starter/index.html
+++ b/starter/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,600" rel="stylesheet" type="text/css">
         <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
-        <link type="text/css" rel="stylesheet" href="style.css">
+        <link type="text/css" rel="stylesheet" href="style1.css">
         
         <title>Pig Game</title>
     </head>
@@ -36,6 +36,6 @@
             <img src="dice-5.png" alt="Dice" class="dice">
         </div>
         
-        <script src="app.js"></script>
+        <script src="app1.js"></script>
     </body>
 </html>
