the sort of twitter styled app

--- a/material_design.html
+++ b/material_design.html
@@ -34,7 +34,7 @@
 <!--div class="navbar-fixed"-->
   <nav>
     <div class="nav-wrapper black">
-      <a href="#" class="brand-logo center" id="babu_font"><b><span class="white-text">BabuSoft</span></b></a>
+      <a href="#" class="brand-logo center" id="babu_font"><b><span class="white-text">BabuSoft();</span></b></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
       </ul>
       <div class="row">
